Changing file structure and adding content

--- a/Ronin_withkawaiiface.rte/Actors/RoninSoldier/RoninSoldier.ini
+++ b/Ronin_withkawaiiface.rte/Actors/RoninSoldier/RoninSoldier.ini
@@ -24,36 +24,42 @@ AddActor = AHuman
 		PresetName = Kawaii Ronin Heavy Head
 		GibWoundLimit = 8
 		AddAttachable = Attachable
-			CopyOf = Coalition Light Helmet
+			CopyOf = Ronin Motorcycle Helmet
 			ParentOffset = Vector
 				X = -1
 				Y = -6
 		AddAttachable = Attachable
-			CopyOf = Coalition Light Helmet
-			PresetName = Ronin Soldier Helmet A2
-			ScriptPath = Ronin.rte/Actors/RoninSoldier/ArmorF.lua
+			CopyOf = Ronin Soldier Helmet
 			ParentOffset = Vector
-				X = 0
+				X = -1
 				Y = -6
-		ParentOffset = Vector
-			X = 0
-			Y = -8
-
-AddActor = AHuman
-	CopyOf = Ronin Sniper
-	PresetName = Kawaii Ronin Sniper
-	Head = Attachable
-		CopyOf = Kawaii Ronin Head
-		PresetName = Kawaii Ronin Head Sniper
-		ScriptPath = Ronin_withkawaiiface.rte/Actors/RoninSoldier/Head.lua
-		SpriteFile = ContentFile
-			FilePath = Ronin_withkawaiiface.rte/Actors/RoninSoldier/RoninHeadB.png
-		FrameCount = 3
 		AddAttachable = Attachable
-			CopyOf = Ronin Sniper Hat
+			CopyOf = Ronin Browncoat Mask
 			ParentOffset = Vector
-				X = -2
+				X = -1
 				Y = -6
-		ParentOffset = Vector
-			X = 0
-			Y = -8
+		AddAttachable = Attachable
+			CopyOf = Ronin Crab Helmet
+			ParentOffset = Vector
+				X = -1
+				Y = -6
+				
+
+//AddActor = AHuman
+//	CopyOf = Ronin Sniper
+//	PresetName = Kawaii Ronin Sniper
+//	Head = Attachable
+//		CopyOf = Kawaii Ronin Head
+//		PresetName = Kawaii Ronin Head Sniper
+//		ScriptPath = Ronin_withkawaiiface.rte/Actors/RoninSoldier/Head.lua
+//		SpriteFile = ContentFile
+//			FilePath = Ronin_withkawaiiface.rte/Actors/RoninSoldier/RoninHeadB.png
+//		FrameCount = 3
+//		AddAttachable = Attachable
+//			CopyOf = Ronin Sniper Hat
+//			ParentOffset = Vector
+//				X = -2
+//				Y = -6
+//		ParentOffset = Vector
+//			X = 0
+//			Y = -8
