More changes to file and proper adding to the kawaiisoldier.ini

--- a/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
@@ -15,3 +15,31 @@ AddActor = AHuman
 		ParentOffset = Vector
 			X = 0
 			Y = -8
+
+AddActor = AHuman
+	CopyOf = Raider
+	PresetName = Kawaii Ronin Heavy
+	Head = Attachable
+		CopyOf = Kawaii Ronin Head
+		PresetName = Kawaii Ronin Heavy Head
+		GibWoundLimit = 8
+		AddAttachable = Attachable
+			CopyOf = Ronin Motorcycle Helmet
+			ParentOffset = Vector
+				X = -1
+				Y = -6
+		AddAttachable = Attachable
+			CopyOf = Ronin Soldier Helmet
+			ParentOffset = Vector
+				X = -1
+				Y = -6
+		AddAttachable = Attachable
+			CopyOf = Ronin Browncoat Mask
+			ParentOffset = Vector
+				X = -1
+				Y = -6
+		AddAttachable = Attachable
+			CopyOf = Ronin Crab Helmet
+			ParentOffset = Vector
+				X = -1
+				Y = -6
