--- a/Ronin_withkawaiiface.rte/Index.ini
+++ b/Ronin_withkawaiiface.rte/Index.ini
@@ -6,6 +6,6 @@ DataModule
 	CrabToHumanSpawnRatio = 0
 	IncludeFile = Ronin_withkawaiiface.rte/Actors/Actors.ini
 	IncludeFile = Ronin_withkawaiiface.rte/Loadouts.ini
-	IncludeFile = Ronin.rte/Devices/Devices.ini
-	IncludeFile = Ronin.rte/Effects/Gibs.ini
+	IncludeFile = Ronin.rte/Devices/Shared.ini
+	IncludeFile = Ronin.rte/Effects/Wound.ini
 	SupportedGameVersion = 6.0.0
