--- a/Ronin_withkawaiiface.rte/Index.ini
+++ b/Ronin_withkawaiiface.rte/Index.ini
@@ -7,5 +7,5 @@ DataModule
 	IncludeFile = Ronin_withkawaiiface.rte/Actors/Actors.ini
 	IncludeFile = Ronin_withkawaiiface.rte/Loadouts.ini
 	IncludeFile = Ronin.rte/Devices/Shared.ini
-	IncludeFile = Ronin.rte/Effects/Wound.ini
+	IncludeFile = Ronin.rte/Effects/Wounds.ini
 	SupportedGameVersion = 6.0.0
