Added is faction

--- a/Ronin_withkawaiiface.rte/Index.ini
+++ b/Ronin_withkawaiiface.rte/Index.ini
@@ -1,5 +1,6 @@
 DataModule
 	ModuleName = Kawaii Ronin Tech
+	IsFaction = 1
 	IconFile = ContentFile
 		FilePath = Ronin_withkawaiiface.rte/ModuleIcon.png
 	Description = Rag-tag parties of bandits who prey on weak and unsuspecting explorers. Their soldiers are unarmored and weapons primitive, but they manage to get the job done.
