Changed attachables to effect

--- a/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
@@ -23,22 +23,22 @@ AddActor = AHuman
 		CopyOf = Kawaii Ronin Head
 		PresetName = Kawaii Ronin Heavy Head
 		GibWoundLimit = 8
-		AddAttachable = Attachable
+		AddEffect = Attachable
 			CopyOf = Ronin Motorcycle Helmet
 			ParentOffset = Vector
 				X = -1
 				Y = -3
-		AddAttachable = Attachable
+		AddEffect = Attachable
 			CopyOf = Ronin Soldier Helmet
 			ParentOffset = Vector
 				X = -1
 				Y = -6
-		AddAttachable = Attachable
+		AddEffect = Attachable
 			CopyOf = Ronin Browncoat Mask
 			ParentOffset = Vector
 				X = 0
 				Y = -2
-		AddAttachable = Attachable
+		AddEffect = Attachable
 			CopyOf = Ronin Crab Helmet
 			ParentOffset = Vector
 				X = -1
