made changes to files

--- a/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
@@ -1,10 +1,10 @@
 AddEffect = Attachable
 	CopyOf = Ronin Head
 	PresetName = Kawaii Ronin Head
-	ScriptPath = Ronin_withkawaiiface.rte/Actors/Infantry/Head.lua
+	//ScriptPath = Ronin_withkawaiiface.rte/Actors/Infantry/Head.lua
 	SpriteFile = ContentFile
 		FilePath = Ronin_withkawaiiface.rte/Actors/Infantry/RoninHead.png
-	FrameCount = 6
+	FrameCount = 14
 
 // RONIN SOLDIER
 AddActor = AHuman
