Added single helmet for Ronin heavy

--- a/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
@@ -22,10 +22,12 @@ AddActor = AHuman
 	Head = Attachable
 		CopyOf = Kawaii Ronin Head
 		PresetName = Kawaii Ronin Heavy Head
-		
+		AddAttachable = Attachable
+		CopyOf = Ronin Soldier Helmet
+		ParentOffset - Vector
+			X = -1 
+			Y =	-3
+
 		ParentOffset = Vector
 			X = 0
 			Y = -8
-
-		AddEffect = Attachable
-			CopyOf = Ronin Motorcycle Helmet
