--- a/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
@@ -24,7 +24,7 @@ AddActor = AHuman
 		PresetName = Kawaii Ronin Heavy Head
 		AddAttachable = Attachable
 		CopyOf = Ronin Soldier Helmet
-		ParentOffset - Vector
+		ParentOffset = Vector
 			X = -1 
 			Y =	-3
 
