Added connection to RoninSoldier.lua

--- a/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/KawaiiSoldier.ini
@@ -1,7 +1,6 @@
 AddEffect = Attachable
 	CopyOf = Ronin Head
 	PresetName = Kawaii Ronin Head
-	//ScriptPath = Ronin_withkawaiiface.rte/Actors/Infantry/Head.lua
 	SpriteFile = ContentFile
 		FilePath = Ronin_withkawaiiface.rte/Actors/Infantry/RoninHead.png
 	FrameCount = 6
@@ -22,11 +21,7 @@ AddActor = AHuman
 	Head = Attachable
 		CopyOf = Kawaii Ronin Head
 		PresetName = Kawaii Ronin Heavy Head
-		AddAttachable = Attachable
-		CopyOf = Ronin Soldier Helmet
-		ParentOffset = Vector
-			X = -1
-			Y = -3
+		ScriptPath = Data/Ronin.rte/Actors/Shared/RoninSoldier.lua
 
 		ParentOffset = Vector
 			X = 0
