--- a/Ronin_withkawaiiface.rte/Index.ini
+++ b/Ronin_withkawaiiface.rte/Index.ini
@@ -1,5 +1,5 @@
 DataModule
-	ModuleName = Kawaii Ronin Tech
+	ModuleName = Kawaii Ronin
 	IsFaction = 1
 	IconFile = ContentFile
 		FilePath = Ronin_withkawaiiface.rte/ModuleIcon.png
@@ -7,6 +7,13 @@ DataModule
 	CrabToHumanSpawnRatio = 0
 	IncludeFile = Ronin_withkawaiiface.rte/Actors/Actors.ini
 	IncludeFile = Ronin_withkawaiiface.rte/Loadouts.ini
+	SupportedGameVersion = 6.0.0
+
+	ModuleName = Kawaii Ronin Tech
+	IconFile = ContentFile
+		FilePath = Ronin_withkawaiiface.rte/ModuleIcon.png
+	Description = Rag-tag parties of bandits who prey on weak and unsuspecting explorers. Their soldiers are unarmored and weapons primitive, but they manage to get the job done.
+	CrabToHumanSpawnRatio = 0
 	IncludeFile = Ronin.rte/Devices/Shared.ini
 	IncludeFile = Ronin.rte/Effects/Wounds.ini
 	SupportedGameVersion = 6.0.0
