remoevd ronin sniper

--- a/Ronin_withkawaiiface.rte/Loadouts.ini
+++ b/Ronin_withkawaiiface.rte/Loadouts.ini
@@ -33,7 +33,7 @@ AddLoadout = Loadout
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Glock
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Sniper
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/M16
 	AddCargoItem = HDFirearm
@@ -92,7 +92,7 @@ AddLoadout = Loadout
 	DeliveryCraft = ACDropShip
 		PresetName = Base.rte/Drop Ship MK1
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Sniper
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Kar98
 	AddCargoItem = HDFirearm
