Changed file structured to mimic original

--- a/Ronin_withkawaiiface.rte/Index.ini
+++ b/Ronin_withkawaiiface.rte/Index.ini
@@ -5,15 +5,16 @@ DataModule
 		FilePath = Ronin_withkawaiiface.rte/ModuleIcon.png
 	Description = Rag-tag parties of bandits who prey on weak and unsuspecting explorers. Their soldiers are unarmored and weapons primitive, but they manage to get the job done.
 	CrabToHumanSpawnRatio = 0
-	IncludeFile = Ronin_withkawaiiface.rte/Actors/Actors.ini
+	FactionBuyMenuTheme = BuyMenuTheme
+		SkinFile = Ronin.rte/GUIs/BuyMenuSkin.ini
+		BackgroundColorIndex = 62
+		LogoFile = Ronin.rte/GUIs/BuyMenuLogo.png
+	IncludeFile = Ronin.rte/Effects.ini
+	IncludeFile = Ronin.rte/Devices.ini
+	IncludeFile = Ronin.rte/Craft.ini
+	IncludeFile = Ronin.rte/SceneObjects.ini
+	ScriptPath = Ronin.rte/Loadouts.lua
+	IncludeFile = Ronin_withkawaiiface.rte/Actors.ini
 	IncludeFile = Ronin_withkawaiiface.rte/Loadouts.ini
-	SupportedGameVersion = 6.0.0
 
-	ModuleName = Kawaii Ronin Tech
-	IconFile = ContentFile
-		FilePath = Ronin_withkawaiiface.rte/ModuleIcon.png
-	Description = Rag-tag parties of bandits who prey on weak and unsuspecting explorers. Their soldiers are unarmored and weapons primitive, but they manage to get the job done.
-	CrabToHumanSpawnRatio = 0
-	IncludeFile = Ronin.rte/Devices/Shared.ini
-	IncludeFile = Ronin.rte/Effects/Wounds.ini
 	SupportedGameVersion = 6.0.0
