Updated file sturucuted, edited loadouts for update, separated heavy and light infantry and changed item list

--- a/Ronin_withkawaiiface.rte/Actors/Infantry/RoninHeavy/RoninHeavy.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/RoninHeavy/RoninHeavy.ini
@@ -2,22 +2,12 @@ AddEffect = Attachable
 	CopyOf = Ronin Head
 	PresetName = Kawaii Ronin Head
 	SpriteFile = ContentFile
-		FilePath = Ronin_withkawaiiface.rte/Actors/Infantry/RoninHead.png
+		FilePath = Ronin_withkawaiiface.rte/Actors/Infantry/RoninHeavy/RoninHead.png
 	FrameCount = 6
-
-// RONIN SOLDIER
-AddActor = AHuman
-	CopyOf = Bandit
-	PresetName = Kawaii Ronin Soldier
-	Head = Attachable
-		CopyOf = Kawaii Ronin Head
-		ParentOffset = Vector
-			X = 0
-			Y = -8
 
 AddActor = AHuman
 	CopyOf = Raider
-	PresetName = Kawaii Ronin Heavy
+	PresetName = Kawaii Ronin Raider
 	Head = Attachable
 		CopyOf = Kawaii Ronin Head
 		PresetName = Kawaii Ronin Heavy Head
