--- a/Ronin_withkawaiiface.rte/Loadouts.ini
+++ b/Ronin_withkawaiiface.rte/Loadouts.ini
@@ -3,7 +3,7 @@ AddLoadout = Loadout
 	DeliveryCraft = ACRocket
 		PresetName = Base.rte/Rocket MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Bandit
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/AK-47
 	AddCargoItem = HDFirearm
@@ -27,13 +27,13 @@ AddLoadout = Loadout
 	DeliveryCraft = ACRocket
 		PresetName = Base.rte/Rocket MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Bandit
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/TommyGun
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Glock
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Bandit
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/M16
 	AddCargoItem = HDFirearm
@@ -44,7 +44,7 @@ AddLoadout = Loadout
 	DeliveryCraft = ACRocket
 		PresetName = Base.rte/Rocket MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Pumpgun
 	AddCargoItem = HDFirearm
@@ -54,7 +54,7 @@ AddLoadout = Loadout
 	AddCargoItem = TDExplosive
 		PresetName = Ronin.rte/Molotov Cocktail
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Spas 12
 	AddCargoItem = HDFirearm
@@ -62,7 +62,7 @@ AddLoadout = Loadout
 	AddCargoItem = TDExplosive
 		PresetName = Ronin.rte/Pineapple Grenade
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Uzi
 	AddCargoItem = HDFirearm
@@ -71,17 +71,17 @@ AddLoadout = Loadout
 		PresetName = Ronin.rte/Chainsaw
 
 AddLoadout = Loadout
-	PresetName = Infantry Heavy
+	PresetName = Infantry Raider
 	DeliveryCraft = ACRocket
 		PresetName = Base.rte/Rocket MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/M60
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Uzi
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Thumper
 	AddCargoItem = HDFirearm
@@ -92,7 +92,7 @@ AddLoadout = Loadout
 	DeliveryCraft = ACDropShip
 		PresetName = Base.rte/Drop Ship MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Bandit
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/Kar98
 	AddCargoItem = HDFirearm
@@ -103,7 +103,7 @@ AddLoadout = Loadout
 	DeliveryCraft = ACRocket
 		PresetName = Base.rte/Rocket MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Bandit
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/RPG-7
 	AddCargoItem = HDFirearm
@@ -120,13 +120,13 @@ AddLoadout = Loadout
 	DeliveryCraft = ACRocket
 		PresetName = Base.rte/Rocket MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Soldier
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Bandit
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/TommyGun
 	AddCargoItem = HDFirearm
 		PresetName = Base.rte/Riot Shield
 	AddCargoItem = HDFirearm
-		PresetName = Base.rte/Heavy Digger
+		PresetName = Base.rte/Raider Digger
 	AddCargoItem = HDFirearm
 		PresetName = Base.rte/Disarmer
 
@@ -135,7 +135,7 @@ AddLoadout = Loadout
 	DeliveryCraft = ACDropShip
 		PresetName = Base.rte/Drop Ship MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/M60
 	AddCargoItem = HDFirearm
@@ -143,7 +143,7 @@ AddLoadout = Loadout
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/MAC-10
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/M16
 	AddCargoItem = HDFirearm
@@ -154,7 +154,7 @@ AddLoadout = Loadout
 	DeliveryCraft = ACDropShip
 		PresetName = Base.rte/Drop Ship MK2
 	AddCargoItem = AHuman
-		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Heavy
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Raider
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/M60
 	AddCargoItem = HDFirearm
