--- a/Ronin_withkawaiiface.rte/Index.ini
+++ b/Ronin_withkawaiiface.rte/Index.ini
@@ -8,7 +8,7 @@ DataModule
 	FactionBuyMenuTheme = BuyMenuTheme
 		SkinFile = Ronin.rte/GUIs/BuyMenuSkin.ini
 		BackgroundColorIndex = 62
-		LogoFile = Ronin.rte/GUIs/BuyMenuLogo.png
+		LogoFile = Ronin_withkawaiiface.rte/ModuleIcon.png
 	IncludeFile = Ronin.rte/Effects.ini
 	IncludeFile = Ronin.rte/Devices.ini
 	IncludeFile = Ronin.rte/Craft.ini
