Changed loadout to have ronin command and infantry medic

--- a/Ronin_withkawaiiface.rte/Loadouts.ini
+++ b/Ronin_withkawaiiface.rte/Loadouts.ini
@@ -10,15 +10,35 @@ AddLoadout = Loadout
 		PresetName = Ronin.rte/Glock
 
 AddLoadout = Loadout
+	PresetName = Infantry Medic
+	DeliveryCraft = ACRocket
+		PresetName = Ronin.rte/Rocket MK2
+	AddCargoItem = AHuman
+		PresetName = Ronin_withkawaiiface.rte/Kawaii Ronin Bandit
+		
+	AddCargoItem = HDFirearm
+		PresetName = Ronin.rte/AK-47
+	AddCargoItem = HDFirearm
+		PresetName = Ronin.rte/Glock
+	AddCargoItem = HDFirearm
+		PresetName = Base.rte/Medikit
+
+AddLoadout = Loadout
 	PresetName = Infantry Brain
 	DeliveryCraft = ACDropShip
 		PresetName = Base.rte/Drop Ship MK2
 	AddCargoItem = AHuman
-		PresetName = Base.rte/Brain Robot
+		PresetName = Ronin.rte/Commander
 	AddCargoItem = HDFirearm
 		PresetName = Ronin.rte/AK-47
 	AddCargoItem = HDFirearm
-		PresetName = Base.rte/Medium Digger
+		PresetName = Ronin.rte/Desert Eagle
+	AddCargoItem = HDFirearm
+		PresetName = Ronin.rte/Desert Eagle
+	AddCargoItem = HDFirearm
+		PresetName = Base.rte/Constructor
+	AddCargoItem = HDFirearm
+		PresetName = Base.rte/Medikit
 	AddCargoItem = ACrab
 		PresetName = Base.rte/Anti-Air Drone
 
