Changed head names for commander

--- a/Ronin_withkawaiiface.rte/Actors/Infantry/Brains/Commander/RoninCommander.ini
+++ b/Ronin_withkawaiiface.rte/Actors/Infantry/Brains/Commander/RoninCommander.ini
@@ -2,8 +2,8 @@
 // Ronin Commander
 
 AddEffect = Attachable
-	CopyOf = Ronin Head
-	PresetName = Kawaii Ronin Head
+	CopyOf = Ronin Commander Head
+	PresetName = Kawaii Ronin Commander Head
 	SpriteFile = ContentFile
 		FilePath = Ronin_withkawaiiface.rte/Actors/Infantry/Brains/Commander/RoninHead.png
 	FrameCount = 6
@@ -12,8 +12,8 @@ AddActor = AHuman
 	CopyOf = Commander
 	PresetName = Kawaii Ronin Commander
 	Head = Attachable
-		CopyOf = Kawaii Ronin Head
-		PresetName = Kawaii Ronin Heavy Head
+		CopyOf = Kawaii Ronin Commander Head
+		PresetName = Kawaii Ronin Commander Head
 		ParentOffset = Vector
 			X = 0
 			Y = -8
